MSVSCPP_FILES = \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libsmdev/libsmdev.vcproj \
	libuna/libuna.vcproj \
	pysmdev/pysmdev.vcproj \
	smdev_test_error/smdev_test_error.vcproj \
	smdev_test_handle/smdev_test_handle.vcproj \
	smdev_test_notify/smdev_test_notify.vcproj \
	smdev_test_support/smdev_test_support.vcproj \
	smdevinfo/smdevinfo.vcproj \
	libsmdev.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

