MSVSCPP_FILES = \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libsmdev/libsmdev.vcproj \
	libuna/libuna.vcproj \
	pysmdev/pysmdev.vcproj \
	smdev_test_ata/smdev_test_ata.vcproj \
	smdev_test_error/smdev_test_error.vcproj \
	smdev_test_handle/smdev_test_handle.vcproj \
	smdev_test_notify/smdev_test_notify.vcproj \
	smdev_test_optical_disc/smdev_test_optical_disc.vcproj \
	smdev_test_scsi/smdev_test_scsi.vcproj \
	smdev_test_sector_range/smdev_test_sector_range.vcproj \
	smdev_test_string/smdev_test_string.vcproj \
	smdev_test_support/smdev_test_support.vcproj \
	smdev_test_track_value/smdev_test_track_value.vcproj \
	smdevinfo/smdevinfo.vcproj \
	libsmdev.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

